# VanityGPU

./: .env.example  README.md  USE_OF_APID.md
api/: .gitignore  Cargo.toml
api/migrations/2025-12-31-184542-0000_create_jobs/: up.sql
api/src/: app.rs  main.rs  schema.rs
api/src/handlers/: aidp_callback.rs  create_job.rs  mod.rs
api/src/models/: job.rs
api/src/routes/: jobs.rs
api/src/services/: queue.rs  webhook.rs
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
worker/: .gitignore  Cargo.toml
worker/src/: attestation.rs  encrypt.rs  http.rs  job.rs  main.rs  queue.rs  types.rs
worker/src/gpu/: cpu.rs  mod.rs
