[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
diesel_cli = "2.3.5"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "1.0.2", features = [ "tokio-comp" ] }
tokio = { version = "1", features = ["full"] }
vanitygpu = { path = "../worker" }
