[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = "0.5.1"
rand = "0.8" # Version 0.9 might be too new for some crates? sticking to 0.8 common
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18" # 3.0.0 is suspicious, sticking to stable
x25519-dalek = { version = "2", features = ["static_secrets", "serde"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
base64 = "0.22"
hex = "0.4"
redis = "0.24"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"

